force-app/main/default/objects/Management_Account_Plan_Review__c/Management_Account_Plan_Review__c.object-meta.xml
<CustomObject>
    <label>Management Account Plan Review</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Management Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Management Account Plan Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>