force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <description>This is the account plan the MR is directly related to</description>
    <label>Account Plan</label>
    <referenceTo>SFDC_Acct_Plan__c</referenceTo>
    <relationshipLabel>Management Account Plan Reviews</relationshipLabel>
    <relationshipName>Management_Account_Plan_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>