force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Account_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Account_Strategy__c</fullName>
    <description>Is this a clear statement of WHAT you are going to do to achieve the plan?
1.	This is the big picture strategy for the entire account and should not be more than a few sentences. 

2.	Example: Our account strategy is do what is necessary to win the unvended Company XYZ’s Contractor File initiative with an Iron Mountain agreement that allows us to amend and affiliate all existing accounts. Also, focus all of our sales resources on adding new affiliates resulting in naming IRM as their vendor much the way we have directed NAO to use Company XYZ.</description>
    <inlineHelpText>Is this a clear statement of WHAT you are going to do to achieve the plan?</inlineHelpText>
    <label>Account Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>