force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Approval_Rating__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rating__c</fullName>
    <formula>IF( 
AND( 
ISPICKVAL( Account_Strategy__c , &quot;Completed&quot;), ISPICKVAL( Completeness__c , &quot;Completed&quot;), ISPICKVAL(Customer_Narrative__c , &quot;Completed&quot;), ISPICKVAL(Organizational_Heat_Map_Key_Contacts__c , &quot;Completed&quot;), ISPICKVAL(Customer_Challenges__c , &quot;Completed&quot;), ISPICKVAL(Objectives__c , &quot;Completed&quot;)), &quot;http://free-121d5f44d20-121d603d1c5-121ee2b8103.force.com/img/icon/entitlements32.png&quot;, &quot;http://free-121d5f44d20-121d603d1c5-121ee2b8103.force.com/img/msg_icons/error24.png&quot; 


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Rating (CONGA)</label>
    <type>Text</type>
</CustomField>