force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <formula>IF( 
AND(
   ISPICKVAL( Account_Strategy__c , &quot;Completed&quot;), ISPICKVAL(  Completeness__c , &quot;Completed&quot;), ISPICKVAL(Customer_Narrative__c , &quot;Completed&quot;), ISPICKVAL(Organizational_Heat_Map_Key_Contacts__c , &quot;Completed&quot;), ISPICKVAL(Customer_Challenges__c , &quot;Completed&quot;), ISPICKVAL(Objectives__c , &quot;Completed&quot;)), IMAGE(&quot;/img/icon/entitlements32.png&quot;, &quot;Certified&quot;), IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Not Certified&quot;) 


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>