force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Completeness__c.field-meta.xml
<CustomField>
    <fullName>Completeness__c</fullName>
    <description>Are all elements of your account plan filled out?</description>
    <inlineHelpText>Are all elements of your account plan filled out?</inlineHelpText>
    <label>Completeness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>