force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Customer_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Customer_Challenges__c</fullName>
    <description>What are your customer’s primary challenges that Iron Mountain can solve? What obstacles are in your way, and what is the plan for overcoming them?
1.	Industry  Challenges/How Iron Mountain can solve/How to teach for differentiation (Challenger)
2.	Company Challenges/How Iron Mountain can solve/How to teach for differentiation (Challenger)</description>
    <inlineHelpText>What are your customer’s primary challenges that IM can solve? What obstacles are in your way, and what is the plan for overcoming them?
Industry &amp; Company Challenges/How can you teach for Iron Mountain’s differentiators?</inlineHelpText>
    <label>Customer Challenges</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>