force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Customer_Challenges_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Challenges_Notes__c</fullName>
    <label>Customer Challenges Notes</label>
    <type>TextArea</type>
</CustomField>