force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Customer_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Customer_Narrative__c</fullName>
    <description>Is this a sound interpretation of data and customer knowledge?
1.	The customer narrative should take all of the data (internal and external) that exists on the account and interpret it. Examples of items to cover include new leadership, market expansion, international growth, trigger events (real estate moves, M&amp;A, regulations impacting their industry), high level opportunities for the account based on exiting internal data. It should tell you what it means and why it is important to you. It may be different based on the maturity of the account, but this is an overall interpretation of the current state of the account and should not include anything copied and pasted from the company’s website.</description>
    <inlineHelpText>Is this a sound interpretation of data and customer knowledge? Is it written out, and NOT copy and pasted?</inlineHelpText>
    <label>Customer Narrative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>