force-app/main/default/objects/Management_Account_Plan_Review__c/fields/MASS_UPDATE_FIELD__c.field-meta.xml
<CustomField>
    <fullName>MASS_UPDATE_FIELD__c</fullName>
    <label>MASS UPDATE FIELD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>