force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <description>Are they clearly actionable for HOW you achieve the account strategy, with owners and dates?
1.	These should be higher level objectives that are broad, such as “getting into the C-Suite” with indications of HOW you are going to do this. Since there are no more strategic and tactical objectives (just “objectives,”) each of these can be longer and include the tactics of how you will achieve the objective. Each objective needs to be actionable.
2.	Each objective should be tied to a specific service line in which you are trying to gain more business.</description>
    <inlineHelpText>Are they clearly actionable for HOW you achieve the account strategy, with owners and dates?</inlineHelpText>
    <label>Objectives</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>