force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Objectives_Notes__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Notes__c</fullName>
    <label>Objectives Notes</label>
    <type>TextArea</type>
</CustomField>