force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Organizational_Heat_Map_Key_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Organizational_Heat_Map_Key_Contacts__c</fullName>
    <description>Is it completed with all relevant names and titles?
1.	This should be completed with the names of who you call on currently, who you are trying to gain access to, relationship to the people you know, how you evaluate the relationship that currently exists, and what service line they are associated with (if applicable). *Note* This is under development and may be able to be accomplished using the “Key Contacts” button.
2.	Challenger: For each name, identify what is important to them on both a functional role (what they are measured by) and/or personal level.
3.	Challenger: For each name, describe how are you providing insight (aka “teaching”) to each of these individuals. How are they looped into the larger strategic plan to close gaps in areas you do not have coverage?</description>
    <inlineHelpText>Is it completed with all relevant names and titles?</inlineHelpText>
    <label>Key Contacts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>