force-app/main/default/objects/Management_Account_Plan_Review__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Management_Account_Plan_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>